# mmr-global-planner

./: .gitignore  Dockerfile  README.md  docker-compose.yml
gp_env/: run_global.sh
gp_env/src/common_msgs/: CMakeLists.txt  package.xml
gp_env/src/common_msgs/msg/: NavSatHeading.msg
gp_env/src/mmrGlobalPlanner/: package.xml  requirements.txt  setup.py
gp_env/src/mmrGlobalPlanner/config/: params.yaml
gp_env/src/mmrGlobalPlanner/global_planner/: global_trajectory.py
src/common_msgs/msg/: TrajectoryPoint.msg  TrajectoryPoints.msg
src/mmrGlobalPlanner/: requirements.txt
src/mmrGlobalPlanner/config/: params.yaml
src/mmrGlobalPlanner/global_planner/: centerline_publisher_node.py  elaborate_output.py  global_planner_node.py
src/mmrGlobalPlanner/global_planner/input/: varano_x_y_r_v.csv
src/mmr_base/: CMakeLists.txt  package.xml
src/mmr_base/config/: car_configurations.h  configuration.hpp
src/mmr_base/launch/: acceleration_drive.launch.xml  acceleration_mapping_and_planning.launch.xml  autocross_drive.launch.xml  autocross_mapping_and_planning.launch.xml  ekf_slam.launch.xml  lidar_full.launch.py  perception_stack.launch.xml  sim_ekf_slam.launch.xml  sim_mapping_and_planning.launch.xml  skidpad_drive.launch.xml  skidpad_mapping_and_planning.launch.xml  start_sensors.launch.xml  test.launch.xml  test_step1.launch.xml  test_step2.launch.xml  track_drive.launch.xml  track_mapping_and_planning.launch.xml
src/mmr_base/msg/: ActuatorStatus.msg  ActuatorsStatus.msg  AutsystemState.msg  BrakingActuatorStatus.msg  CarTargetInfo.msg  CmdEcu.msg  CmdMotor.msg  ControlLog.msg  EcuStatus.msg  GpsSpeed.msg  ImuCanData.msg  Marker.msg  MeshFile.msg  PerceptionCone.msg  PerceptionCones.msg  PurePursuitLog.msg  RaceStatus.msg  ResStatus.msg  SteeringActuatorStatus.msg  Sync.msg  TargetSpeed.msg  UVCoordinate.msg  VehicleState.msg  raceStatus.msg  targetSpeed.msg
src/mmr_base/msg/Imu/: Acceleration.msg  EulerAngles.msg  Gnss.msg  GnssStatus.msg  Quaternion.msg  RateOfTurn.msg  UTCTime.msg  Velocity.msg
src/mmr_base/scripts/: kria_launch.sh
